--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,46 @@
+# ./.gitignore
+
+# Dependencies
+node_modules/
+.pnpm-store/
+
+# PNPM Lockfile
+pnpm-lock.yaml
+
+# Build outputs
+dist/
+build/
+.next/
+out/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# OS generated files
 .DS_Store
+Thumbs.db
+
+# Environment variables
+.env
+.env*.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE directories
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Test results
+coverage/
