--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "test": "pnpm -r test",
         "start:react-app": "pnpm --filter ocjs-create-react-app start",
         "ocjs-node:start": ". \"$NVM_DIR/nvm.sh\" && cd packages/ocjs-node && nvm use && pnpm start",
-        "start:examples": "pnpm --filter opencascade.js-examples start"
+        "start:examples": "pnpm --filter opencascade.js-examples start",
+        "start:read-step-calc-aabb": "pnpm --filter read-step-calc-aabb start"
     },
     "devDependencies": {}
 }
