--- a/packages/ocjs-create-react-app-typescript/package.json
+++ b/packages/ocjs-create-react-app-typescript/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ocjs-create-react-app",
+    "name": "ocjs-create-react-app-typescript",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
