--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "cae-study",
+    "name": "ocjs-threejs-study",
     "version": "1.0.0",
     "private": true,
     "description": "A monorepo for learning and example projects",
