--- a/packages/cad-ocjs/package.json
+++ b/packages/cad-ocjs/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "read-step-calc-aabb",
+    "name": "cad-ocjs",
     "version": "1.0.0",
-    "description": "STEP 파일 읽기 및 AABB 계산",
+    "description": "cad-ocjs",
     "main": "src/index.js",
     "license": "MIT",
     "devDependencies": {
-        "copy-webpack-plugin": "^9.0.0",
+        "copy-webpack-plugin": "^9.1.0",
         "file-loader": "^6.2.0",
         "gh-pages": "^3.2.0",
         "html-webpack-plugin": "^5.3.1",
@@ -19,6 +19,7 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
-        "opencascade.js": "^2.0.0-beta.54fa06a"
+        "opencascade.js": "^2.0.0-beta.54fa06a",
+        "three": "^0.124.0"
     }
 }
