boolean 연산, 파일 변환 & 자바스크립트에 반환

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "pnpm -r build",
         "test": "pnpm -r test",
-        "start:react-app": "pnpm --filter ocjs-create-react-app start",
+        "start:react-app": "pnpm --filter ocjs-create-react-app-typescript start",
         "ocjs-node:start": ". \"$NVM_DIR/nvm.sh\" && cd packages/ocjs-node && nvm use && pnpm start",
         "start:examples": "pnpm --filter opencascade.js-examples start",
         "start:cad-ocjs": "pnpm --filter cad-ocjs start"
